telepathy-haze (0.7.0-1) UNRELEASED; urgency=low

  * Branch for experimental
  * New upstream release
    - renames Skype prpls to something less horrible (Closes: #693456)
  * Improve long Description (Closes: #685488)
  * Switch to debhelper 9
  * Add debug symbols

 -- Simon McVittie <smcv@debian.org>  Thu, 22 Nov 2012 16:06:11 +0000

telepathy-haze (0.6.0-1) unstable; urgency=low

  * New upstream release
    - Bump libtelepathy-glib-dev build-dependency
  * debian/control:
    - Bump Standards-Version to 3.9.3 (no further changes)
    - Correct grammar in description (Closes: #653343)
    - List the different protocols supported by libpurple (Closes: #624186)

 -- Laurent Bigonville <bigon@debian.org>  Sat, 07 Apr 2012 16:09:17 +0200

telepathy-haze (0.5.0-1) unstable; urgency=low

  [ Jonny Lamb ]
  * debian/control: Fix typo in short description. Thanks to "Ronny
    Cardona (Rcart)" <rcart1019@gmail.com> for the patch. (Closes:
    #614699)
  * debian/control: Title case "Telepathy". Thanks to William Joseph
    Thompson for absolutely nothing.

  [ Laurent Bigonville ]
  * New upstream release
    - Add initial contacts blocking support (Closes: #627251)
  * debian/control:
    - Bump libtelepathy-glib-dev build-dependency
    - Add python as Build-dependency (Closes: #625166)
    - Bump Standards-Version to 3.9.2 (no further changes)
    - Remove article at the beginning of the description to please lintian
  * debian/rules:
    - Do not try to delete .manager file, upstream doesn't ship it anymore
  * Switch to dpkg-source 3.0 (quilt) format

 -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Jul 2011 20:34:40 +0200

telepathy-haze (0.4.0-1) unstable; urgency=low

  * New upstream release
  * Bump dependency on libpurple to 2.6.0 (mandatory), then to 2.7.0 (so we
    always get support for VoIP calls)
  * Stop using our local telepathy-haze manpage, which has been accepted
    and improved upstream