@@ -6,6 +6,7 @@ telepathy-haze (0.7.0-1) UNRELEASED; urgency=low
   * Improve long Description (Closes: #685488)
   * Switch to debhelper 9
   * Add debug symbols
+  * Remove unused README.source and update-patches.mk
 
  -- Simon McVittie <smcv@debian.org>  Thu, 22 Nov 2012 16:06:11 +0000
 
